Fixing hero banner image on mobile and clients block height issue

--- a/blocks/clients/clients.css
+++ b/blocks/clients/clients.css
@@ -24,7 +24,6 @@
 
 .clients .teaser p {
   margin: .5rem 0;
-  max-height: 65px;
   overflow: hidden;
 }
 
